# cmake_in_subdir

./: .gitignore  LICENSE
cpp/: CISConfig.cmake  CMakeLists.txt  cis.hpp.in
